@@ -4,6 +4,9 @@ AM_CONFIG_HEADER(config.h)
 
 AM_INIT_AUTOMAKE(db, 1.85)
 
+AC_CONFIG_AUX_DIR(..)
+AC_CANONICAL_HOST
+
 AC_PROG_INSTALL
 AM_MAINTAINER_MODE
 AC_PROG_MAKE_SET
@@ -23,7 +26,8 @@ AC_EXEEXT
 AC_OBJEXT
 
 dnl Checks for programs.
-AC_PROG_RANLIB
+AC_CHECK_TOOL(AR, ar)
+AC_CHECK_TOOL(RANLIB, ranlib)
 
 AC_PATH_PROG(FALSE,false,:)
 AC_PATH_PROG(SH,sh,$FALSE)
